--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -6,5 +6,6 @@
     "loading": "Loading",
     "create_private_lobby": "Create private lobby",
     "join_private_lobby": "Click JOIN after copying code",
-    "exit_confirm": "Are you sure you want to leave the game?"
+    "exit_confirm": "Are you sure you want to leave the game?",
+    "save_login": "Save login info"
 }
